<resources>
    <string name="app_name">Plonka</string>
    <!-- Strings related to login activity -->
    <string name="prompt_user">Personal number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">Let\'s go, </string>
    <string name="invalid_username">Not a 10 digit personal number!</string>
    <string name="invalid_password">Password must be 8+ characters!</string>
    <string name="login_failed">Login failure</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to register activity -->
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="mobile">+467xxxxxxxx</string>
    <string name="personal_number">YYYYMMDDNNNN</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="accept_terms">I have read and accept the Terms &amp; Conditions and Privacy Policy.</string>
    <string name="continue_button">Continue</string>

    <!-- Strings related to hub activity -->
    <string name="require_location_permissions">To use Plonka, you need to allow location tracking. Closing app.</string>
    <string name="button_start_working">Start working</string>
    <string name="button_start_working_inactive">Enter a zone</string>
    <string name="title_activity_hub">Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Firstname Lastname</string>
    <string name="nav_header_subtitle">User ID: </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="map_dialog_title">Start shift?</string>
    <string name="map_dialog_message">While working, your location and video feed will be used to track your work.</string>
    <string name="map_dialog_pos">Proceed</string>
    <string name="map_dialog_neg">Cancel</string>

    <string name="menu_home">Zone map</string>
    <string name="menu_history">Previous sessions</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_support_email">Email</string>
    <string name="menu_support_phone">Phone</string>

    <string name="shift_history_instructions">Phone</string>

    <!-- Strings related to shift activity -->
    <string name="title_activity_shift">Session</string>
    <string name="tracking_reminder">Logging your location...</string>
    <string name="button_stop_working">End session</string>

    <string name="shift_dialog_title">End session?</string>
    <string name="shift_dialog_message">End your session next to a trash can where you can take a photo to prove that your collected litter has been thrown away properly. \n\nNote: You can also abandon your session in the next step if need be.</string>
    <string name="shift_dialog_pos">End session</string>
    <string name="shift_dialog_neg">Keep working</string>

    <!-- Strings related to ending shift activity -->
    <string name="end_shift_dialog_title">Abandon session?</string>
    <string name="end_shift_dialog_message">By abandoning your session, you will not receive any compensation! All information about your session will be lost.</string>
    <string name="end_shift_dialog_pos">Abandon session</string>
    <string name="end_shift_dialog_neg">Cancel</string>

    <string name="button_submit_shift">Submit</string>
    <string name="button_abandon_shift">Abandon</string>

    <string name="end_shift_instructions">Capture a photo of your bag of collected litter next to a trash can. This shows the amount and that you have properly disposed of it.</string>

</resources>
