<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_home" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@android:drawable/ic_menu_recent_history"
                android:title="@string/menu_history" />

            <item
                android:id="@+id/nav_faq"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/menu_faq" />
        </menu>
    </item>

    <item android:title="Contact us">
        <menu>

            <item
                android:id="@+id/nav_support_email"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/menu_support_email" />

            <item
                android:id="@+id/nav_support_phone"
                android:icon="@android:drawable/stat_sys_speakerphone"
                android:title="@string/menu_support_phone" />
        </menu>
    </item>

</menu>
