<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.plonka.ui.map.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.plonka.ui.gallery.GalleryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.example.plonka.ui.faq.FaqFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />
</navigation>